lots of testing

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 data/
 datasets/
 search/
+retrieval augmented generation/integrated-qa-neo4j-langchain-semi-structured-data/pdf/STRABAG SE_Geschaeftsbericht_2022_DE.pdf
